[package]
name = "cc-schedule-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc-core = { git = "https://github.com/computingfun-org/cc-core.git" }
clap = { version = "4.4.6", features = ["derive"] }
eframe = "0.23.0"
egui = "0.23.0"
serde = "1.0.188"
serde_json = "1.0.107"
